package oodv4;

public enum Role {
    ADMIN,
    MEMBER
}
